[package]
name = "happy-todo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "happy-todo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
clap = { version = "4.4.2", features = ["cargo"] }
crossterm = "0.27.0"
home = "0.5.5"
regex = "1.9.5"
serde_json = "1.0.105"
